--- a/styles/UI/modal-component.css
+++ b/styles/UI/modal-component.css
@@ -563,7 +563,7 @@
     }
 
     .modal-component--poem .modal-component-body {
-        padding: 0 1.25rem 100px;
+        padding: 1.5rem 1.25rem 100px;
         max-height: 95vh;
     }
 
@@ -661,7 +661,7 @@
     }
 
     .modal-component--poem .modal-component-body {
-        padding: 0 1rem 90px;
+        padding: 1.25rem 1rem 90px;
         max-height: 100vh;
     }
 
